@startuml
left to right direction


package "Data Layer" {
    class DataLayerAPI {
        - employee_data: EmployeeData
        - work_trip_data: WorkTripData
        - destination_data: DestinationData
        - airplane_data: AirplaneData
        - flight_data: FlightData
        - airplane_type_data: AirplaneTypeData
    }

    class EmployeeData {
        + read_all_employees()
        + read_all_pilots()
        + read_all_flight_attendants()
        + add_employee(employee: Employee)
        + modify_employee_data(updated_employees: List<Employee>)
        + add_pilot(pilot: Pilot)
        + add_flight_attendant(flight_attendant: FlightAttendant)
    }

    class WorkTripData {
        + read_all_work_trips()
        + add_work_trip(work_trip: WorkTrip)
        + update_work_trip_data(updated_work_trips: List<WorkTrip>)
    }

    class DestinationData {
        + read_all_destinations()
        + add_destination(destination: Destination)
        + modify_destination_data(updated_destinations: List<Destination>)
    }

    class AirplaneData {
        + read_all_airplanes()
        + add_airplane(airplane: Airplane)
        + modify_airplane_data(updated_airplanes: List<Airplane>)
    }

    class FlightData {
        + read_all_flights()
        + add_flight(flight: Flight)
        + modify_flight_data(updated_flights: List<Flight>)
    }

    class AirplaneTypeData {
        + read_all_airplane_types()
        + add_airplane_type(airplane_type: AirplaneType)
        + modify_airplane_type_data(updated_airplane_types: List<AirplaneType>)
    }

    DataLayerAPI --> EmployeeData
    DataLayerAPI --> WorkTripData
    DataLayerAPI --> DestinationData
    DataLayerAPI --> AirplaneData
    DataLayerAPI --> FlightData
    DataLayerAPI --> AirplaneTypeData
}

@enduml